--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -17,13 +17,14 @@
     <% end %>
   </footer>
 
-
-
-  <aside class="soldout">
-    SOLD OUT!
-  </aside>
+  <% if product.quantity == 0 %>
+    <aside class="soldout">
+      SOLD OUT!
+    </aside>
+  <% end %>
 
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
+
 </article>
