--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,27 @@
-<h1>Sign up!!!</h1>
+<h1>Sign Up!!!</h1>
+
+<%= form_for :user, url: '/users' do |form| %>
+
+  <div class="form-group">
+    <%= form.label :name %>
+    <%= form.text_field :name, class: 'form-control'%>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :email %>
+    <%= form.text_field :email, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :password %>
+    <%= form.password_field :password, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :password_confirmation %>
+    <%= form.password_field :password_confirmation, class: 'form-control' %>
+  </div>
+
+  <%= form.submit "Submit" %>
+
+<% end %>
