--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -11,7 +11,7 @@
 
       <!-- Username -->
       <% if current_user %>
-        Hello, <%= current_user.email %>! | <%= link_to "Logout", '/logout' %>
+        Hello, <%= current_user.first_name %>! | <%= link_to "Logout", '/logout' %>
       <% else %>
         <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
       <% end %>
