--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,50 +4,69 @@
     <h1>My Cart</h1>
   </header>
 
-  <div class="panel panel-default items">
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th colspan="2">Product</th>
-          <th>Unit Price</th>
-          <th>Quantity</th>
-          <th>Price</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @cart_total = 0 %>
-        <% cart.each do |product_id, details| %>
-          <%= render 'item', product_id: product_id, details: details %>
-        <% end %>
-      </tbody>
-      <tfoot>
-        <tr>
-          <th colspan="4">
-            TOTAL:
-          </th>
-          <th>
-            <%= @cart_total %>
-          </th>
-        </tr>
-      </tfoot>
-    </table>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-12">
-      <%= form_tag orders_path do %>
-        <script
-          src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-amount="<%= @cart_total * 100 %>"
-          data-name="Jungle"
-          data-description="<%= @user.first_name %> <%= @user.last_name %>'s Jungle Order"
-          data-locale="auto"
-          data-email="<%= @user.email %>"
-          data-currency="cad">
-        </script>
-      <% end %>
+  <% if cart.size > 0 %>
+    <div class="panel panel-default items">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th colspan="2">Product</th>
+            <th>Unit Price</th>
+            <th>Quantity</th>
+            <th>Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @cart_total = 0 %>
+          <% cart.each do |product_id, details| %>
+            <%= render 'item', product_id: product_id, details: details %>
+          <% end %>
+        </tbody>
+        <tfoot>
+          <tr>
+            <th colspan="4">
+              TOTAL:
+            </th>
+            <th>
+              <%= @cart_total %>
+            </th>
+          </tr>
+        </tfoot>
+      </table>
     </div>
-  </div>
+
+    <div class="row">
+      <div class="col-xs-12">
+        <%= form_tag orders_path do %>
+          <script
+            src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+            data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+            data-amount="<%= @cart_total * 100 %>"
+            data-name="Jungle"
+
+            <% if @user %>
+              data-description="<%= @user.first_name %> <%= @user.last_name %>'s Jungle Order"
+            <% else %>
+              data-description="Guest's Jungle Order"
+            <% end %>
+
+            data-locale="auto"
+
+            <% if @user %>
+              data-email="<%= @user.email %>"
+            <% else %>
+              data-email="No email"
+            <% end %>
+
+            data-currency="cad">
+          </script>
+        <% end %>
+      </div>
+    </div>
+
+  <% else %>
+    <div class="order-summary jumbotron">
+      <h4>You cart is empty. Buy something will ya!</h4>
+    </div>
+  <% end %>
 
 </section>
