--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -27,12 +27,17 @@
 
       <div class="col-sm-8">
         <dl class="dl-horizontal">
+          <% rateSym = "\u{1F334}" %>
           <dt>Reviews</dt>
           <dd>
             <% @reviews.each do |review| %>
+              <% user = User.find_by(id: review.user_id) %>
+              <% if user != nil %>
+                <p><%= "#{rateSym} " * review.rating %><br/><%= user.first_name %> <%= user.last_name %></p>
+              <% else %>
+                <p><%= "#{rateSym} " * review.rating %><br/>Unnamed</p>
+              <% end %>
               <p><%= review.description %></p>
-              <p>Posted by: <%= review.user_id %> </p>
-              <p>Rating: <%= review.rating %></p>
             <% end %>
           </dd>
         </dl>
@@ -44,7 +49,7 @@
             <%= form.label :description %>
             <%= form.text_field :description %><br/>
             <%= form.label :rating %>
-            <%= form.select :rating, [['*****', 5], ['****', 4], ['***', 3], ['**', 2], ['*', 1]] %><br/>
+            <%= form.select :rating, [[rateSym * 5, 5], [rateSym * 4, 4], [rateSym * 3, 3], [rateSym * 2, 2], [rateSym, 1]] %><br/>
             <%= form.submit "Post" %>
           <% end %>
         </div>
