--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -35,7 +35,7 @@
               <p><%= "#{rateSym} " * review.rating %><br/><%= user.first_name %> <%= user.last_name %></p>
               <p><%= review.description %></p>
               <% if current_user != nil && user.id == current_user.id %>
-                <button> DELET THIS </button>
+                <%= link_to fa_icon('trash'), product_review_path(@product.id, review.id), class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: "Are you sure?" } %>
               <% end %>
             <% end %>
           </dd>
