--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,6 +14,11 @@
 
       <div class="col-sm-8">
         <dl class="dl-horizontal">
+
+          <% if flash[:notice] %>
+            <h1><%= flash[:notice] %></h1>
+          <% end %>
+
           <dt>Name</dt>
           <dd><%= @product.name %></dd>
           <dt>Description</dt>
