--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,11 +1,16 @@
 <section class="products-show">
 
+  <% if flash[:notice] %>
+    <div class="alert alert-info">
+      <strong><%= flash[:notice] %></strong>
+    </div>
+  <% end %>
+
   <header class="page-header">
     <h1><%= link_to @product.category.name, @product.category %> &raquo; <%= @product.name %></h1>
   </header>
 
   <article class="product-detail">
-
     <div class="row">
 
       <div class="col-sm-4">
@@ -14,10 +19,6 @@
 
       <div class="col-sm-8">
         <dl class="dl-horizontal">
-
-          <% if flash[:notice] %>
-            <h1><%= flash[:notice] %></h1>
-          <% end %>
 
           <dt>Name</dt>
           <dd><%= @product.name %></dd>
@@ -29,38 +30,29 @@
           <dd><%= @product.price %></dd>
         </dl>
       </div>
+    </div>
+  </article>
 
-      <div class="col-sm-8">
-        <dl class="dl-horizontal">
-          <% rateSym = "\u{1F334}" %>
-          <dt>Reviews</dt>
-          <dd>
-            <% @reviews.each do |review| %>
-              <% user = User.find_by(id: review.user_id) %>
-              <p><%= "#{rateSym} " * review.rating %><br/><%= user.first_name %> <%= user.last_name %></p>
-              <p><%= review.description %></p>
-              <% if current_user != nil && user.id == current_user.id %>
-                <%= link_to fa_icon('trash'), product_review_path(@product.id, review.id), class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: "Are you sure?" } %>
-              <% end %>
-            <% end %>
-          </dd>
+  <article class="product-detail">
+    <div class="row">
+      <div class="col-sm-12 text-center">
+        <% rateSym = "\u{1F334}" %>
+        <h2>Reviews</h2>
+        <dl>
+          <% @reviews.each do |review| %>
+            <%= render 'review', rateSym: rateSym, review: review %>
+          <% end %>
         </dl>
       </div>
-
-      <% if current_user != nil %>
-        <div>
-          <%= form_for [@product, Review.new] do |form| %>
-            <%= form.label :description %>
-            <%= form.text_field :description %><br/>
-            <%= form.label :rating %>
-            <%= form.select :rating, [[rateSym * 5, 5], [rateSym * 4, 4], [rateSym * 3, 3], [rateSym * 2, 2], [rateSym, 1]] %><br/>
-            <%= form.submit "Post" %>
-          <% end %>
-        </div>
-      <% end %>
-
     </div>
 
+    <div class="row">
+      <div class="col-sm-12 text-center">
+        <% if current_user != nil %>
+          <%= render 'reviewform', rateSym: rateSym, product: @product%>
+        <% end %>
+      </div>
+    </div>
   </article>
 
 </section>
