--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
   </header>
 
   <div class="products">
-    <%= render @products %>
+    <%= render @products, ratings: @ratings %>
   </div>
 
 </section>
