--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -8,7 +8,7 @@
   </header>
 
   <div class="products">
-    <%= render @products %>
+    <%= render @products, ratings: @ratings %>
   </div>
 
 </section>
